feat: upgrade to React 18 (#538)

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,3 +1,7 @@
+<meta
+  name="description"
+  content="React implementation of the Intersection Observer API to tell you when an element enters or leaves the viewport."
+/>
 <style>
   .sbdocs .sbdocs-hidden {
     display: none;
