docs: fix storybook flashing

--- a/storybook/.storybook/preview-head.html
+++ b/storybook/.storybook/preview-head.html
@@ -6,4 +6,22 @@
   .sbdocs .sbdocs-hidden {
     display: none;
   }
+  .sb-preparing-docs {
+    background: #1b1c1d;
+  }
+  .sb-preparing-docs .sb-previewBlock {
+    background: #2a2a2a;
+  }
+  .sb-preparing-docs .sb-argstableBlock-head {
+    background: #1a1a1a;
+  }
+  .sb-preparing-docs .sb-argstableBlock-body td {
+    background: #2a2a2a;
+  }
+  .sb-argstableBlock-body tr:not(:first-child) {
+    border-top: 1px solid #1a1a1a;
+  }
+  .sb-preparing-docs .sb-previewBlock_icon {
+    background: #727272;
+  }
 </style>
